--- a/src/Component/Header/_Header.scss
+++ b/src/Component/Header/_Header.scss
@@ -264,13 +264,14 @@ h2, ul {
   .slide-mobile-menu {
     background-color: #333;
     width: 100vw;
+    right: 0px;
     height: 500px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: -100px;
-    transition: .25s ease-in-out;
+    // transition: .25s ease-in;
     opacity: 0;
     transition-property: opacity;
     z-index: -1;
@@ -285,6 +286,7 @@ h2, ul {
     top: 90px;
     right: 0px;
     opacity: 1;
+    
 
     // @media (min-width: #{$screen-xl}) {
     //   display: none;
